# MRI_brain_segmentation_evaluation

./: README.txt
DoxyDoc/html/: _analyzer_8cpp.html  _analyzer_8cpp__incl.map  _analyzer_8cpp__incl.md5  _analyzer_8cpp_source.html  _analyzer_8h.html  _analyzer_8h__dep__incl.map  _analyzer_8h__dep__incl.md5  _analyzer_8h__incl.map  _analyzer_8h__incl.md5  _analyzer_8h_source.html  _results_8cpp.html  _results_8cpp__incl.map  _results_8cpp__incl.md5  _results_8cpp_source.html  _results_8h.html  _results_8h__dep__incl.map  _results_8h__dep__incl.md5  _results_8h_source.html  _seg_perf_app_8cpp.html  _seg_perf_app_8cpp__incl.map  _seg_perf_app_8cpp__incl.md5  _seg_perf_app_8cpp_source.html  _seg_perf_app_8h.html  _seg_perf_app_8h__dep__incl.map  _seg_perf_app_8h__dep__incl.md5  _seg_perf_app_8h__incl.map  _seg_perf_app_8h__incl.md5  _seg_perf_app_8h_source.html  _segmentation_measures_image_filter_8h.html  _segmentation_measures_image_filter_8h__dep__incl.map  _segmentation_measures_image_filter_8h__dep__incl.md5  _segmentation_measures_image_filter_8h__incl.map  _segmentation_measures_image_filter_8h__incl.md5  _segmentation_measures_image_filter_8h_source.html  _segmentation_measures_image_filter_8hxx.html  _segmentation_measures_image_filter_8hxx__dep__incl.map  _segmentation_measures_image_filter_8hxx__dep__incl.md5  _segmentation_measures_image_filter_8hxx__incl.map  _segmentation_measures_image_filter_8hxx__incl.md5  _segmentation_measures_image_filter_8hxx_source.html  (+175 more)
DoxyDoc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  search.js  typedefs_0.js  (+8 more)
sources/: CMakeLists.txt
sources/SegPerfAnalyzer/: CMakeLists.txt  DirectoryFinder.cmake  Doxyfile  Doxyfile.in  segPerf.cppcheck
sources/SegPerfAnalyzer/src/: SegPerfApp.cpp  SegPerfApp.h  main.cpp
sources/SegPerfAnalyzer/src/Analyzer/: Analyzer.cpp  Analyzer.h  SegmentationMeasuresImageFilter.h  SegmentationMeasuresImageFilter.hxx
sources/SegPerfAnalyzer/src/Results/: Results.cpp  Results.h
sources/superbuild/: CMakeLists.txt  ConfigureExternalProjects.cmake
sources/superbuild/configuration_steps/: EP_Initialisation.cmake
sources/superbuild/environment/: CheckEnvironment.cmake
sources/superbuild/projects_modules/: ITK.cmake  SegPerfAnalyzer.cmake  TCLAP.cmake
